--- a/Developer-Examples/hmt1developerexamples/src/main/res/layout/document_main.xml
+++ b/Developer-Examples/hmt1developerexamples/src/main/res/layout/document_main.xml
@@ -16,6 +16,7 @@
         android:textSize="18sp" />
 
     <ImageView
+        android:id="@id/imageView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
