--- a/Developer-Examples/hmt1developerexamples/src/main/res/layout/command_square.xml
+++ b/Developer-Examples/hmt1developerexamples/src/main/res/layout/command_square.xml
@@ -1,23 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-     android:layout_width="fill_parent"
+    android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:layout_marginBottom="50dp"
-    android:layout_marginTop="50dp"
-    >
-
+    android:layout_marginBottom="20dp"
+    android:layout_marginTop="20dp">
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:src="@mipmap/ic_launcher"
-        android:layout_marginTop="0dp"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
-
+        android:layout_centerHorizontal="true"
+        android:layout_gravity="center"
+        android:layout_marginTop="0dp"
+        android:gravity="center"
+        android:src="@mipmap/ic_launcher" />
 
     <TextView
         android:id="@+id/smallTextView"
@@ -28,11 +25,6 @@
         android:gravity="center"
         android:text="TextView"
         android:textColor="@android:color/black"
-        android:textSize="20dp"
-         />
-
-
-
-
+        android:textSize="20dp" />
 
 </RelativeLayout>
