--- a/WearML-Example/WearML-Example-Application/app/src/main/res/layout/activity_main.xml
+++ b/WearML-Example/WearML-Example-Application/app/src/main/res/layout/activity_main.xml
@@ -1,55 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-<LinearLayout
-    android:paddingTop="38dp"
-    android:gravity="center_horizontal"
-    android:orientation="horizontal"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-
-    <ImageButton
-        android:id="@+id/boar"
-        android:onClick="onBoarClick"
-        android:scaleType="fitCenter"
-        android:src="@drawable/boar"
-        android:layout_width="180dp"
-        android:layout_height="180dp"
-        />
-
-    <ImageButton
-        android:id="@+id/sunshine"
-        android:onClick="onSunshineClick"
-        android:scaleType="fitCenter"
-        android:src="@drawable/sunshine"
-        android:layout_width="180dp"
-        android:layout_height="180dp"
-        />
-
-    <ImageButton
-        android:id="@+id/amber"
-        android:onClick="onAmberClick"
-        android:scaleType="fitCenter"
-        android:src="@drawable/amber"
-        android:layout_width="180dp"
-        android:layout_height="180dp"
-        />
-</LinearLayout>
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <LinearLayout
-        android:padding="38dp"
-        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:orientation="horizontal"
+        android:paddingTop="38dp">
+
+        <ImageButton
+            android:id="@+id/boar"
+            android:layout_width="180dp"
+            android:layout_height="180dp"
+            android:onClick="onBoarClick"
+            android:scaleType="fitCenter"
+            android:src="@drawable/boar" />
+
+        <ImageButton
+            android:id="@+id/sunshine"
+            android:layout_width="180dp"
+            android:layout_height="180dp"
+            android:onClick="onSunshineClick"
+            android:scaleType="fitCenter"
+            android:src="@drawable/sunshine" />
+
+        <ImageButton
+            android:id="@+id/amber"
+            android:layout_width="180dp"
+            android:layout_height="180dp"
+            android:onClick="onAmberClick"
+            android:scaleType="fitCenter"
+            android:src="@drawable/amber" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="38dp">
 
         <TextView
-            style="@style/TextAppearance.AppCompat.Title"
             android:id="@+id/title"
+            style="@style/TextAppearance.AppCompat.Title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
