Fix references to old package name (Fixes bug HMT-200)
Fixed a couple of references that were left behind when the package name was updated

--- a/Developer-Examples/hmt1developerexamples/src/main/res/layout/activity_main.xml
+++ b/Developer-Examples/hmt1developerexamples/src/main/res/layout/activity_main.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:contentDescription="hf_no_number|hf_hide_help"
-    tools:context="com.realwear.hmt1developertest.MainActivity">
-
+    tools:context="com.realwear.hmt1developerexamples.MainActivity">
 
     <GridView
         android:id="@+id/gridView"
@@ -25,6 +23,5 @@
         android:layout_alignParentBottom="true"
         android:text="version: 1.1"
         android:textSize="18sp" />
-
 
 </RelativeLayout>
