--- a/hmt1developerexamples/src/main/res/layout/document_main.xml
+++ b/hmt1developerexamples/src/main/res/layout/document_main.xml
@@ -17,10 +17,10 @@
 
     <ImageView
         android:id="@id/imageView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="200dp"
+        android:layout_height="150dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="34dp"
-        android:src="@drawable/forest_thumbnail" />
+        android:src="@drawable/sample_thumbnail" />
 </RelativeLayout>
