--- a/hmt1developerexamples/src/main/res/layout/bnf_activity.xml
+++ b/hmt1developerexamples/src/main/res/layout/bnf_activity.xml
@@ -4,12 +4,8 @@
     android:layout_height="match_parent"
     android:contentDescription="hf_no_number">
 
-    <View
-        android:id="@+id/bnf_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-
     <TextView
+        android:id="@+id/bnfDescription"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
