--- a/hmt1developerexamples/src/main/res/layout/audio_capture_main.xml
+++ b/hmt1developerexamples/src/main/res/layout/audio_capture_main.xml
@@ -42,7 +42,7 @@
         android:visibility="visible" />
 
     <TextView
-        android:id="@+id/fileTextLabel"
+        android:id="@+id/filenameLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/progressBar"
